# quantum-hypergraph-partitioning

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: hypergraph_r3_n10_d5_w1_0.npy  hypergraph_r3_n10_d5_w1_1.npy  hypergraph_r3_n10_d5_w1_10.npy  hypergraph_r3_n10_d5_w1_11.npy  hypergraph_r3_n10_d5_w1_12.npy  hypergraph_r3_n10_d5_w1_13.npy  hypergraph_r3_n10_d5_w1_14.npy  hypergraph_r3_n10_d5_w1_15.npy  hypergraph_r3_n10_d5_w1_16.npy  hypergraph_r3_n10_d5_w1_17.npy  hypergraph_r3_n10_d5_w1_18.npy  hypergraph_r3_n10_d5_w1_19.npy  hypergraph_r3_n10_d5_w1_2.npy  hypergraph_r3_n10_d5_w1_20.npy  hypergraph_r3_n10_d5_w1_21.npy  hypergraph_r3_n10_d5_w1_22.npy  hypergraph_r3_n10_d5_w1_23.npy  hypergraph_r3_n10_d5_w1_24.npy  hypergraph_r3_n10_d5_w1_25.npy  hypergraph_r3_n10_d5_w1_26.npy  hypergraph_r3_n10_d5_w1_27.npy  hypergraph_r3_n10_d5_w1_28.npy  hypergraph_r3_n10_d5_w1_29.npy  hypergraph_r3_n10_d5_w1_3.npy  hypergraph_r3_n10_d5_w1_30.npy  hypergraph_r3_n10_d5_w1_31.npy  hypergraph_r3_n10_d5_w1_32.npy  hypergraph_r3_n10_d5_w1_33.npy  hypergraph_r3_n10_d5_w1_34.npy  hypergraph_r3_n10_d5_w1_35.npy  hypergraph_r3_n10_d5_w1_36.npy  hypergraph_r3_n10_d5_w1_37.npy  hypergraph_r3_n10_d5_w1_38.npy  hypergraph_r3_n10_d5_w1_39.npy  hypergraph_r3_n10_d5_w1_4.npy  hypergraph_r3_n10_d5_w1_40.npy  hypergraph_r3_n10_d5_w1_41.npy  hypergraph_r3_n10_d5_w1_42.npy  hypergraph_r3_n10_d5_w1_43.npy  hypergraph_r3_n10_d5_w1_44.npy  (+760 more)
hypergraph/: __init__.py  annealer.py  baselines.py  evaluation.py  loader.py  qaoa.py  utils.py
logs/: qaoa_sa_comparison_raw.csv  (+1 more)
scripts/: run_experiment.py  (+1 more)
(+1 files in other folders)
