[project]
name = "quantum-hypergraph-partitioning"
version = "0.1.0"
description = "Reproducibility package for QAOA and simulated annealing hypergraph partitioning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dimod>=0.12",
    "numpy>=2.0",
    "networkx>=3.0",
    "qiskit>=1.0",
    "qiskit-aer>=0.14",
    "qiskit-algorithms>=0.3",
    "kahypar>=1.3.7",
]

[tool.ruff]
line-length = 120
